kubernetes/apps/kube-system/cilium/gateway/internal.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  labels:
    app.kubernetes.io/changed-on: 20250615T185600
  annotations:
    external-dns.alpha.kubernetes.io/target: "proxy.home.${DOMAIN_NET}"
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "10.73.10.10"
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: "proxy.home.${DOMAIN_NET}"
  listeners:
    - name: http-net
      protocol: HTTP
      port: 80
      hostname: "*.${DOMAIN_NET}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-net
      protocol: HTTPS
      port: 443
      hostname: "*.${DOMAIN_NET}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${DOMAIN_NET/./-}-tls
    - name: http-app-apps
      protocol: HTTP
      port: 80
      hostname: "*.${DOMAIN_APP_APPS}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-app-apps
      protocol: HTTPS
      port: 443
      hostname: "*.${DOMAIN_APP_APPS}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${DOMAIN_APP_APPS/./-}-tls
    - name: http-app-infra
      protocol: HTTP
      port: 80
      hostname: "*.${DOMAIN_APP_INFRA}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-app-infra
      protocol: HTTPS
      port: 443
      hostname: "*.${DOMAIN_APP_INFRA}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${DOMAIN_APP_INFRA/./-}-tls
    - name: http-dev
      protocol: HTTP
      port: 80
      hostname: "*.${DOMAIN_DEV}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-dev
      protocol: HTTPS
      port: 443
      hostname: "*.${DOMAIN_DEV}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${DOMAIN_DEV/./-}-tls
    - name: http-id
      protocol: HTTP
      port: 80
      hostname: "*.${DOMAIN_ID}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-id
      protocol: HTTPS
      port: 443
      hostname: "*.${DOMAIN_ID}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${DOMAIN_ID/./-}-tls
    - name: http-io
      protocol: HTTP
      port: 80
      hostname: "*.${DOMAIN_IO}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-io
      protocol: HTTPS
      port: 443
      hostname: "*.${DOMAIN_IO}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${DOMAIN_IO/./-}-tls
    - name: http-cloud
      protocol: HTTP
      port: 80
      hostname: "*.${DOMAIN_CLOUD}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-cloud
      protocol: HTTPS
      port: 443
      hostname: "*.${DOMAIN_CLOUD}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${DOMAIN_CLOUD/./-}-tls
    - name: http-st
      protocol: HTTP
      port: 80
      hostname: "*.${DOMAIN_ST}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-st
      protocol: HTTPS
      port: 443
      hostname: "*.${DOMAIN_ST}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${DOMAIN_ST/./-}-tls
    - name: http-net-home
      protocol: HTTP
      port: 80
      hostname: "*.home.${DOMAIN_NET}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-net-home
      protocol: HTTPS
      port: 443
      hostname: "*.home.${DOMAIN_NET}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: home-${DOMAIN_NET/./-}-tls
    - name: http-net-home-kvm
      protocol: HTTP
      port: 80
      hostname: "*.kvm.home.${DOMAIN_NET}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-net-home-kvm
      protocol: HTTPS
      port: 443
      hostname: "*.kvm.home.${DOMAIN_NET}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: kvm-home-${DOMAIN_NET/./-}-tls
    - name: mqtts
      protocol: TCP
      port: 8883
      allowedRoutes:
        namespaces:
          from: All
