kubernetes/apps/kube-system/cilium/gateway/services.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: services
  annotations:
    external-dns.alpha.kubernetes.io/target: "services.home.${DOMAIN_NET}"
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "10.73.10.30"
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: "services.home.${DOMAIN_NET}"
  listeners:
    - name: http-app-apps
      protocol: HTTP
      port: 80
      hostname: "*.${DOMAIN_APP_APPS}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-app-apps
      protocol: HTTPS
      port: 443
      hostname: "*.${DOMAIN_APP_APPS}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${DOMAIN_APP_APPS/./-}-tls
    - name: tls-app-apps
      protocol: TLS
      port: 443
      hostname: "*.${DOMAIN_APP_APPS}"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - name: http-io
      protocol: HTTP
      port: 80
      hostname: "*.${DOMAIN_IO}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-io
      protocol: HTTPS
      port: 443
      hostname: "*.${DOMAIN_IO}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${DOMAIN_IO/./-}-tls
    - name: http-net-home
      protocol: HTTP
      port: 80
      hostname: "*.home.${DOMAIN_NET}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-net-home
      protocol: HTTPS
      port: 443
      hostname: "*.home.${DOMAIN_NET}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: home-${DOMAIN_NET/./-}-tls
    - name: http-net-home-kvm
      protocol: HTTP
      port: 80
      hostname: "*.kvm.home.${DOMAIN_NET}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-net-home-kvm
      protocol: HTTPS
      port: 443
      hostname: "*.kvm.home.${DOMAIN_NET}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: kvm-home-${DOMAIN_NET/./-}-tls
